# terminaleet

./: README.md  pyproject.toml
terminaleet/: cli.py
terminalite/: dummy.py
