[project]
name = "terminalite"
version = "0.1.0"
description = "An AI-enhanced Unix terminal interface with command correction and GPT integration."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai-agents"
]

[project.urls]
Homepage = "https://github.com/yourusername/terminalite"

[tool.setuptools]
packages = ["terminalite"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
