[project]
name = "terminaleet"
version = "0.1.0"
description = "Its a surpris "
authors = [
    { name="Your Name", email="your.email@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai",
    "pydantic"
]

[project.urls]
Homepage = "https://github.com/yourusername/terminalite"

[tool.setuptools]
packages = ["terminaleet"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
tt = "terminaleet.cli:main"